examples/v0.2/errors/uninitialized_constant.nova
// Expected Error:
// Variable 'VERSION' accessed before initialization.

VERSION:: S

print(VERSION)